add image to cta buttons

--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -138,7 +138,7 @@ button {
 .template-block {
   border: 2px dashed #4c53577d;
   border-radius: 8px;
-  height: 4.5rem; 
+  height: 4.5rem;
   padding: 0.4rem;
   background-color: transparent;
   display: flex;
@@ -148,16 +148,16 @@ button {
 }
 
 .high-priority-template {
-  height: 6rem; 
+  height: 6rem;
 }
 
 @media screen and (min-width: 350px) {
   .template-block {
-    height: 6rem; 
+    height: 6rem;
   }
-  
+
   .template-block.high-priority-template {
-    height: 9rem; 
+    height: 9rem;
   }
 }
 
@@ -190,7 +190,7 @@ button {
 }
 
 .content-page-block:hover {
-  border: 2px dashed #5068A8;
+  border: 2px dashed #5068a8;
   cursor: move;
   padding: 0px;
 }
@@ -528,6 +528,7 @@ button {
 .img-button-container .img-button-label {
   flex: 1;
   font-size: 16px;
+  margin-left: 0.8rem;
 }
 
 .img-button-container .img-button-arrow {
@@ -539,13 +540,12 @@ button {
   position: relative;
   width: 100%;
   border-radius: 13px;
-  border: 2px solid #5068a8;
   background-color: #5068a8;
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: white;
-  padding: 16px;
+  padding: 10px;
 }
 .plain-button {
   position: relative;
@@ -556,11 +556,36 @@ button {
   display: inline-block;
   vertical-align: middle;
   color: white;
-  padding: 10px;
+  padding: 12px 10px;
 }
 
 .plain-button:hover {
   cursor: move;
+}
+
+.img-button-section {
+  position: relative;
+}
+
+.img-button-section img {
+  border-radius: 8px;
+  max-width: 70px;
+  height: 65px;
+}
+
+.img-button-section span {
+  position: absolute;
+  bottom: -6px;
+  right: -10px;
+  cursor: pointer;
+}
+
+.img-button-section span:hover g {
+  fill: #5068a8;
+}
+
+.img-button-section span:hover path {
+  fill: #fdfdfd;
 }
 
 @media (min-width: 350px) {
@@ -789,4 +814,3 @@ button {
   font-family: "Segoe UI";
   src: url("../fonts/segoeui.ttf") format("truetype");
 }
-
