--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2135,3 +2135,58 @@ button.add-new-service i {
 .page-selector h1 {
   font-size: 20px;
 }
+
+
+
+/* New Page Button */
+.menu-container {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  margin-left: -30px;
+}
+.menu-button {
+  background-color: #f4f4f4;
+  border: none;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+}
+.menu-button:hover {
+  background-color: #5068A8;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+.menu-button:hover .icon-path {
+  fill: #fff;
+}
+.menu-container:hover .menu {
+  display: block;
+}
+.menu {
+  display: none;
+  position: absolute;
+  top: -10px;
+  left: 100%;
+  background-color: white;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: 100;
+}
+.menu.show {
+  display: block;
+}
+.menu-item {
+  padding: 10px;
+  cursor: pointer;
+  white-space: nowrap;
+  border-bottom: 1px #ccc solid;
+}
+.menu-item:hover {
+  background-color: #eee;
+}
