--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -285,6 +285,7 @@ span#scroll-right:hover {
   align-items: center;
   gap: 8px;
   padding: 12px 16px;
+  width: 100%;
 }
 
 .home-app-bar {
@@ -424,8 +425,72 @@ span#scroll-right:hover {
   font-family: "Segoe UI";
   /* letter-spacing: 1px; */
   font-weight: 500;
+  width: 100%;
+  height: 30px;
+  display: inline-flex;
+  align-items: center;
+  padding-left: 4px;
 }
 
+.app-bar .appbar-title-container {
+  position: relative;
+  display: flex;
+  width: -webkit-fill-available;
+  border: 0 dashed #b9c9eb;
+}
+
+.app-bar .appbar-title-container:hover {
+  border-width: 1px;
+}
+
+.app-bar .appbar-title-container svg {
+  width: 18px;
+  height: 18px;
+  padding: 2px;
+  position: absolute;
+  border: 1px solid #5068a8;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0;
+}
+
+.app-bar .appbar-title-container #save_page_title {
+  opacity: 1;
+  width: 28px;
+  height: 28px;
+  padding: 2px;
+  border-radius: 0;
+  position: initial;
+  border-radius: 2px;
+}
+
+.app-bar .appbar-title-container #edit_page_title {
+  right: -10px;
+  top: -5px;
+}
+
+.app-bar .appbar-title-container:hover svg#edit_page_title {
+  opacity: 1;
+}
+
+.app-bar .appbar-title-container svg:hover {
+  cursor: pointer;
+  background-color: #5068a8;
+}
+
+.app-bar .appbar-title-container #edit_page_title:hover path {
+  fill: #fff;
+}
+
+
+.app-bar .appbar-title-container #save_page_title:hover path {
+  stroke: #fff;
+}
+
+.app-bar svg {
+  width: 50px;
+  flex-shrink: 0;
+}
 /* Input field */
 .tb-form-control {
   padding: 8px;
