--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -640,6 +640,8 @@ button {
   margin-top: 5%;
   margin-left: 5%;
   margin-right: 5%;
+  background-color: #e1e1e1;
+    border-radius: 6px;
 }
 .tb-toggle-buttons button {
   flex: 1;
