impoved page speed

--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -364,7 +364,7 @@ button {
 .tile-title-section {
   position: relative;
   width: fit-content;
-  display: block;
+  display: flex;
 }
 
 .tile-icon-section {
