unstable tile menu popup

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -260,7 +260,7 @@ span#scroll-right:hover {
 }
 
 .active-editor {
-  border: 5px solid #5068a8;
+  /* border: 5px solid #5068a8; */
   /* box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); */
 }
 
