--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
 #tb-body {
   background-color: #6a747f;
   font-family: "Segoe UI", sans-serif;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -38,11 +38,23 @@
   padding: 0 20px;
   background-color: white;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
-  position: relative;
-  /* top: 0; */
-  width: 100%;
+  position: fixed;
+  top: 70px;
+  width: calc(100% - 252px);
   z-index: 10;
   min-height: 50px;
+  /* left: 225px; */
+  right: 0;
+}
+
+.tb-navbar h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.navbar-buttons {
+  display: flex;
+  align-items: center;
 }
 
 .tb-navbar h1 {
@@ -136,12 +148,15 @@ button#open-mapping {
 .tb-btn svg {
   margin-right: 10px; /* Adjust space between icon and text */
 }
-/* Container, siderars and main content */
+
 .tb-container {
   display: flex;
-  overflow: hidden;
-  /* top: 64px; */
+  overflow-y: auto;
+  scrollbar-width: thin;
+  top: 35px;
   position: relative;
+  height: 100%;
+  background-color: #6a747f;
 }
 
 .sidebar {
@@ -151,6 +166,7 @@ button#open-mapping {
   position: relative;
   padding: 30px 18px;
   box-shadow: 0px 3px 6px #00000029;
+  right: 0;
 }
 
 .sidebar h3 {
@@ -162,7 +178,7 @@ button#open-mapping {
 .main-content {
   flex: 1;
   display: flex;
-  align-items: center;
+  align-items: start;
   flex-direction: row;
   justify-content: center;
   padding: 16px;
@@ -170,15 +186,15 @@ button#open-mapping {
 
 .sidebar,
 .main-content {
-  height: 100vh;
+  height: 100%;
   overflow: auto;
-  scrollbar-width: thin;
+  scrollbar-width: none;
   scrollbar-color: transparent transparent;
   /* position: fixed; */
 }
 
 .frame-list {
-  max-width: 90%;
+  max-width: 950px;
   overflow: hidden;
   align-content: center;
   display: flex;
@@ -205,6 +221,8 @@ button#open-mapping {
 
 .navigator {
   margin: 10px;
+  position: relative;
+  top: 35%;
 }
 
 span#scroll-left,
@@ -234,8 +252,8 @@ span#scroll-right:hover {
   flex-shrink: 0;
   width: 50vw;
   height: 90vh;
-  max-width: 378px;
-  max-height: 812px;
+  max-width: 320px;
+  max-height: 680px;
   background-color: #efeeec;
   border-radius: 20px;
   /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
@@ -586,9 +604,12 @@ span#scroll-right:hover {
 
 .theme-option {
   padding: 8px 16px;
-  cursor: pointer;
-  font-size: 14px;
-  color: #333;
+    cursor: pointer;
+    font-size: 11px;
+    color: #333;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .theme-option:hover {
@@ -1932,9 +1953,7 @@ button.add-new-service i {
     /* width: 80vw;
       height: 85vh; */
     max-width: 280px;
-    max-height: 550px;
-
-    /* min-height: 560px; */
+    max-height: 575px;
   }
 
   .sidebar {
