--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -605,11 +605,18 @@ span#scroll-right:hover {
 .theme-option {
   padding: 8px 16px;
     cursor: pointer;
-    font-size: 11px;
+    font-size: 12px;
     color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.theme-option .option-buttons {
+  display: flex;
+  gap: 5px;
+  font-size: 10px;
+  color: #646464;
 }
 
 .theme-option:hover {
@@ -622,11 +629,6 @@ span#scroll-right:hover {
   color: #333;
 }
 
-span.clone-version.fa.fa-clone {
-  float: right;
-}
-
-/* xx */
 .tb-custom-category-selection {
   position: relative;
   width: 100%;
@@ -1942,6 +1944,7 @@ button.add-new-service i {
 @media (max-width: 1440px) {
   .frame-list {
     gap: 1.2em;
+    min-width: 500px;
     max-width: 600px;
   }
 
