--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -613,6 +613,10 @@ span#scroll-right:hover {
     align-items: center;
 }
 
+.theme-option.theme {
+  font-size: 
+  14px;
+}
 .theme-option .option-buttons {
   display: flex;
   gap: 5px;
@@ -700,13 +704,13 @@ span#scroll-right:hover {
 }
 
 .category-option:hover {
-  background: #222f54;
-  color: #fff;
+  background: #e9ecef;
+  color: #333;
 }
 
 .category-option.selected {
-  background: #222f54;
-  color: #fff;
+  background: #e9ecef;
+  color: #333;
 }
 /* Sidebar */
 /* #mapping-section {
@@ -2428,7 +2432,7 @@ details .tb_debug_details-content {
   position: absolute;
   background-color: white;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  z-index: 99999;
+  z-index: 9;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.2s, visibility 0.2s;
@@ -2478,6 +2482,7 @@ details .tb_debug_details-content {
 .menu-container .menu-item.expandable {
   background-color: #f0f0f0;
 }
+
 
 .menu-container .menu-item.no-items {
   display: flex;
@@ -2549,6 +2554,16 @@ details .tb_debug_details-content {
   border-bottom-right-radius: 9px;
 }
 
+.menu-container .menu-category:last-child .menu-item:last-child:hover {
+  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 9px;
+}
+
+.menu-container .menu-category:last-child .menu-item:last-child.expandable {
+  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 9px;
+}
+
 .menu-container .menu-item:hover {
   background-color: #f0f0f0;
 }
@@ -2566,6 +2581,6 @@ details .tb_debug_details-content {
 }
 
 .menu-container .sub-menu-container .menu-item:last-child {
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 9px;
 }
