--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -495,6 +495,7 @@ span#scroll-right:hover {
   border-radius: 7px;
   width: 100%;
   border: 1px solid #b4b9bd;
+  margin-top: 30px;
   /* box-shadow: 0px 3px 6px #00000029; */
 }
 .form-field label {
@@ -890,7 +891,7 @@ h5#current-page-title {
   border-radius: 6px;
   background-color: #ffffff;
   width: 100%;
-  margin: 20px auto;
+  margin: 10px auto;
   gap: 0.13rem;
 }
 
@@ -1099,7 +1100,8 @@ h5#current-page-title {
   display: flex;
   gap: 1rem;
   justify-content: left;
-  margin-top: 12px;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 .cta-style {
@@ -1170,8 +1172,8 @@ h5#current-page-title {
 
 .cta-button-layout svg {
   height: 14px;
-  width: 18px; */
-}
+  width: 18px; 
+} */
 
 .plain-button:hover {
   background-color: #e9e9e9;
