--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -181,7 +181,7 @@ button#open-mapping {
   align-items: start;
   flex-direction: row;
   justify-content: center;
-  padding: 16px;
+  /* padding: 16px; */
 }
 
 .sidebar,
