--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1199,8 +1199,8 @@ h5#current-page-title {
 
 .cta-button-layout svg {
   height: 14px;
-  width: 18px; */
-}
+  width: 18px; }*/
+
 
 .plain-button:hover {
   background-color: #e9e9e9;
