edit cta button icons

--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -532,6 +532,7 @@ img.content-page-block {
 .img-button-container .cta-badge {
   top: -12px;
   right: -12px;
+  cursor: pointer;
 }
 .cta-button:hover .cta-badge,
 .plain-button:hover .cta-badge,
@@ -574,6 +575,7 @@ img.content-page-block {
 .img-button-container .img-button-icon {
   font-size: 24px;
   margin: 0.5rem;
+  position: relative;
 }
 
 .img-button-container .img-button-label {
@@ -1035,12 +1037,12 @@ img.content-page-block {
 
 .add-new-info-section hr {
   border-top: 1.5px dashed #c0c0c0;
-    position: absolute;
-    top: 46%;
-    width: 100%;
-    height: 1px;
-    padding: 0;
-    margin: 0;
+  position: absolute;
+  top: 46%;
+  width: 100%;
+  height: 1px;
+  padding: 0;
+  margin: 0;
 }
 
 .add-new-info-section svg {
@@ -1128,3 +1130,36 @@ img.content-page-block {
 [data-gjs-type="info-cta-section"].gjs-selected .tile-open-menu {
   display: block;
 }
+
+/* Image edit styles */
+.img-button-container .icon-edit-button {
+  position: absolute;
+  bottom: 0;
+  right: -15px;
+  display: none;
+}
+.img-button-container.gjs-selected .img-button:hover .icon-edit-button {
+  display: block;
+}
+
+.img-button-container .icon-edit-button svg path {
+  fill: #fdfdfd;
+}
+
+.img-button-container .icon-edit-button:hover {
+  cursor: pointer;
+}
+
+.img-button-container .icon-edit-button svg g {
+  fill: #5068a8;
+}
+
+.img-button-container .icon-edit-button:hover path {
+  fill: #fdfdfd;
+}
+
+.img-button-container .icon-edit-button:hover g {
+  fill: #5068a8;
+  stroke: #fdfdfd;
+}
+
