--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -206,8 +206,8 @@ button {
 
 .action-button {
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   background-color: #5068a8;
   border-radius: 50%;
   display: flex;
@@ -217,6 +217,7 @@ button {
   display: none;
   transition: all 0.2s ease;
   z-index: 1;
+  padding: 0;
 }
 
 .action-button:hover {
@@ -236,7 +237,7 @@ button {
 }
 
 .add-button-bottom {
-  bottom: -12px;
+  bottom: -10px;
   left: 50%;
   border: 1px solid #5068a8;
   transform: translate(-50%, 0);
@@ -245,7 +246,7 @@ button {
 
 .add-button-right {
   top: 50%;
-  right: -12px;
+  right: -10px;
   border: 1px solid #5068a8;
   transform: translate(0, -50%);
   color: #fff;
@@ -267,11 +268,11 @@ button {
 }
 
 .template-wrapper:hover .add-button-right {
-  display: block;
+  display: flex;
 }
 
 .template-wrapper:hover .add-button-bottom {
-  display: block;
+  display: flex;
 }
 
 .tile-open-menu:hover {
