--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -990,7 +990,6 @@ h5#current-page-title {
   padding: 18px 0;
   /* margin-bottom: 45px; */
   /* border-bottom: 1px solid #d6d3d3; */
-  border-top: 1px solid #d6d3d3;
 }
 
 .sidebar-section.theme-section {
@@ -1975,13 +1974,13 @@ div#cta-selected-actions {
 }
 
 .search-container input[type="text"] {
-  padding: 4px 4px 4px 30px;
-  border-radius: 6px;
-  width: 95%;
-  border: 1px solid #b4b9bd;
-  outline: none;
-  box-sizing: border-box;
-  background-color: white;
+  padding: 4px 4px 4px 30px !important;
+  border-radius: 6px !important;
+  width: 95% !important;
+  border: 1px solid #b4b9bd !important;
+  outline: none !important;
+  box-sizing: border-box !important;
+  background-color: white !important;
 }
 
 .search-container .search-icon {
