--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -139,7 +139,8 @@ button {
 .template-block {
   border: 2px dashed #4c53577d;
   border-radius: 8px;
-  height: 4.5rem;
+  /* height: 4.5rem; */
+  height: 100%;
   padding: 0.4rem;
   background-color: transparent;
   display: flex;
@@ -148,9 +149,9 @@ button {
   cursor: move;
 }
 
-.high-priority-template {
+/* .high-priority-template {
   height: 6rem;
-}
+} */
 
 @media (min-width: 350px) {
   .template-block {
@@ -252,6 +253,16 @@ button {
   color: #fff;
 }
 
+.tile-resize-button {
+  position: absolute;
+  bottom: -15px;
+  left: 20px;
+  display: none;
+  background-color: transparent;
+  border: none;
+  z-index: 1;
+}
+
 .tile-open-menu {
   position: absolute;
   top: -12px;
@@ -260,6 +271,10 @@ button {
 }
 
 .template-wrapper .gjs-selected ~ .tile-open-menu {
+  display: block;
+}
+
+.template-wrapper .gjs-selected ~ .tile-resize-button {
   display: block;
 }
 
@@ -359,6 +374,8 @@ img.content-page-block {
   text-transform: capitalize;
   font-weight: 400;
   cursor: default;
+  width: 100%;
+  word-wrap: break-word;
 }
 
 @media (min-width: 350px) {
@@ -395,7 +412,7 @@ img.content-page-block {
 
 .tile-title-section {
   position: relative;
-  width: fit-content;
+  /* width: 100%; */
   display: flex;
 }
 
@@ -492,6 +509,7 @@ img.content-page-block {
   flex-direction: column;
   margin: 0.5rem;
   text-transform: uppercase;
+  width: 20%;
 }
 
 .cta-button {
@@ -552,6 +570,7 @@ img.content-page-block {
   margin-top: 8px;
   font-size: 12px;
   color: #555;
+  text-align:center;
 }
 
 .img-button-container,
@@ -1070,8 +1089,10 @@ img.content-page-block {
 
 .container-column-info {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   gap: 0.8rem;
+  justify-content: center;
+  flex-flow: wrap;
 }
 
 .container-column-info .img-button-container,
@@ -1091,6 +1112,7 @@ img.content-page-block {
 
 .info-image-section {
   position: relative;
+  width: 100% !important;
 }
 
 .info-image-section:hover .tb-delete-image-icon,
@@ -1100,6 +1122,8 @@ img.content-page-block {
 
 .info-desc-section {
   position: relative;
+  flex: 1 1 100% !important;
+  width: 100%;
 }
 
 .info-desc-section:hover {
@@ -1114,6 +1138,8 @@ img.content-page-block {
 .info-desc-section:hover .tb-delete-image-icon {
   display: flex;
 }
+
+
 
 .info-desc-section .info-desc-content {
   padding: 2px;
