--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -644,6 +644,7 @@ img.content-page-block {
   border-radius: 8px;
   max-width: 70px;
   height: 65px;
+  object-fit: cover;
 }
 
 .img-button-section span {
@@ -1189,4 +1190,3 @@ img.content-page-block {
   fill: #5068a8;
   stroke: #fdfdfd;
 }
-
