--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -255,12 +255,14 @@ button {
 
 .tile-resize-button {
   position: absolute;
-  bottom: -15px;
-  left: 20px;
   display: none;
   background-color: transparent;
   border: none;
+  bottom: -5px;
   z-index: 1;
+  width: 100%;
+  cursor: ns-resize !important;
+  height: 10px;
 }
 
 .tile-open-menu {
@@ -274,7 +276,7 @@ button {
   display: block;
 }
 
-.template-wrapper .gjs-selected ~ .tile-resize-button {
+.template-wrapper:hover .tile-resize-button {
   display: block;
 }
 
@@ -509,7 +511,7 @@ img.content-page-block {
   flex-direction: column;
   margin: 0.5rem;
   text-transform: uppercase;
-  width: 20%;
+  width: calc(100% / 4.5)
 }
 
 .cta-button {
