--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1557,10 +1557,13 @@ div#cta-selected-actions {
 .tb-modal-content {
   background-color: white;
   border-radius: 6px;
-  padding: 40px;
   width: 815px;
   min-height: 600px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-height: 80vh; /* Set a maximum height relative to the viewport */
+  overflow-y: auto; /* Enable vertical scrolling */
+  padding: 20px; /* Add padding for better spacing */
+  box-sizing: border-box; 
 }
 
 .tb-modal-header {
@@ -1593,7 +1596,7 @@ div#cta-selected-actions {
 }
 
 .upload-area img {
-  height: 100%;
+  height: 80%;
   margin-bottom: 10px;
   position: absolute;
   top: 50%;
@@ -1632,23 +1635,12 @@ div#cta-selected-actions {
   font-size: 18px;
 }
 
-.file-list {
-  margin-bottom: 20px;
-  max-height: 300px;
-  overflow: auto;
-  scrollbar-width: thin;
-  /* scrollbar-color: transparent transparent; */
-}
-
 .file-item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
   position: relative;
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow: hidden; */
   cursor: pointer;
-  transition: transform 0.3s ease;
+  transition: border 0.3s ease;
 }
 .action-column {
   display: flex;
@@ -1668,17 +1660,6 @@ div#cta-selected-actions {
   transform: scale(1.05); /* Slight zoom effect */
   transition: all 0.3s ease;
 }
-
-/* .file-item .action-buttons {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  gap: 10px; 
-  opacity: 0; 
-  transition: opacity 0.3s ease;
-} */
 
 .file-item:hover .action-buttons {
   opacity: 1; /* Show buttons on hover */
@@ -1708,11 +1689,12 @@ div#cta-selected-actions {
 }
 
 .file-item img {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
   margin-right: 10px;
   object-fit: cover;
 }
+
 
 .file-item .file-info {
   flex-grow: 1;
@@ -1746,23 +1728,6 @@ div#cta-selected-actions {
 
 .file-item:hover .delete-media {
   opacity: 1;
-}
-
-.file-item .progress-bar {
-  height: 6px;
-  background: #fff;
-  border-radius: 3px;
-  overflow: hidden;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  width: 100%;
-}
-
-.file-item .progress {
-  height: 100%;
-  background: #222f54;
-  width: 0;
-  transition: width 0.3s ease;
 }
 
 .file-item .progress-text {
@@ -3045,7 +3010,13 @@ canvas {
   margin-left: 220px;
   margin-bottom: 40px;
   margin-top: 20px;
-  border: #c0c0c0 solid 1px;
+}
+.modal-footer-buttons{
+  display: flex;
+  align-items: right;
+  width: 100%;
+  margin-left: 540px;
+  gap: 10px;
 }
 
 .modal-footer input[type="range"] {
@@ -3100,26 +3071,17 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .file-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Responsive grid */
+  grid-template-columns: repeat(5, 1fr); /* Responsive grid */
   gap: 10px; /* Spacing between images */
   padding: 10px;
 }
 
 .grid-image {
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   object-fit: cover; /* Ensure the image fills the container */
   border-radius: 8px; /* Match the file-item border-radius */
 }
-.file-item {
-  position: relative;
-  border: 2px solid transparent; /* Default border */
-  border-radius: 8px;
-  overflow: hidden;
-  cursor: pointer;
-  transition: border 0.3s ease;
-}
-
 .file-item.active {
   border: 2px solid #28a745; /* Green border for active tile */
 }
