--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2039,7 +2039,7 @@ div#cta-selected-actions {
 }
 
 .search-container input[type="text"] {
-  padding: 4px 4px 4px 30px !important;
+  /* padding: 4px 4px 4px 30px !important; */
   border-radius: 6px !important;
   width: 95% !important;
   border: 1px solid #b4b9bd !important;
