--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1172,6 +1172,9 @@ h5#current-page-title {
 
 .tile-img-container {
   position: relative;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
   width: 45px;
   height: 37px;
   background-color: #f0f0f0;
@@ -1179,6 +1182,10 @@ h5#current-page-title {
   border: 1px solid #b4b9bd;
   border-radius: 8px;
   display: none;
+}
+
+.tile-img-container:hover svg {
+  stroke: #5068A8;
 }
 
 .tile-img-container img {
