--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1131,7 +1131,7 @@ h5#current-page-title {
   font-size: 16px;
   color: #333333bb;
 }
-
+/* test*/
 .bg-section .add-image .image-icon:hover {
   background-color: none;
 }
