--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -1312,7 +1312,7 @@ img.content-page-block {
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev-img-slide, .next-img-slide {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -1328,13 +1328,13 @@ img.content-page-block {
 }
 
 /* Position the "next button" to the right */
-.next {
+.next-img-slide {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.prev-img-slide:hover, .next-img-slide:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
