--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1677,13 +1677,14 @@ div#cta-selected-actions {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 83%;
   height: 30%; /* Adjust the height of the gradient */
   background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent); /* Dark grey gradient */
   pointer-events: none; /* Ensure the gradient does not interfere with interactions */
   z-index: 1; /* Place the gradient above the image */
   opacity: 0; /* Initially hidden */
   transition: opacity 0.3s ease; /* Smooth fade-in effect */
+  align-self: left;
 }
 .file-item:hover::after {
   opacity: 1; /* Show the gradient on hover */
@@ -1691,7 +1692,7 @@ div#cta-selected-actions {
 
 .action-column {
   display: flex;
-  flex-direction: column; /* Stack items vertically */
+  flex-direction: row; /* Stack items vertically */
   position: absolute; /* Position the action-column over the image */
   top: 50%; /* Center vertically */
   left: 50%; /* Center horizontally */
@@ -1701,7 +1702,7 @@ div#cta-selected-actions {
   opacity: 0; /* Initially hidden */
   transition: opacity 0.3s ease; /* Smooth fade-in effect */
   margin-top: 15px;
-  margin-left: 25px;
+  margin-left: 15px;
 }
 .file-item:hover .action-column {
   opacity: 1; /* Show the action-column on hover */
@@ -1713,21 +1714,6 @@ div#cta-selected-actions {
   filter: blur(4px); /* Blur the image on hover */
   transform: scale(1.05); /* Slight zoom effect */
   transition: all 0.3s ease;
-}
-
-.file-item .action-button {
-  width: 40px;
-  height: 40px;
-  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
 .file-item:hover .action-buttons {
@@ -1781,12 +1767,20 @@ div#cta-selected-actions {
 }
 
 .file-item .delete-media {
-  font-size: 20px;
+  font-size: 16px;
   color: #ffffff;
   opacity: 0; 
   cursor: pointer;
   margin-top: 40px;
   transition: color 0.3s ease, background-color 0.3s ease; /* Smooth transition */
+}
+.file-item .add-image{
+  font-size: 16px;
+  color: #ffffff;
+  opacity: 0; 
+  cursor: pointer;
+  margin-top: 40px;
+  transition: color 0.3s ease, background-color 0.3s ease; /* Smooth transition */  
 }
 
 .file-info .file-info-details {
@@ -1796,7 +1790,10 @@ div#cta-selected-actions {
   width: 100%;
 }
 
-.file-item:hover .delete-media {
+.file-item:hover .delete-media{
+  opacity: 1;
+}
+.file-item:hover .add-image{
   opacity: 1;
 }
 
