--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -170,7 +170,7 @@ button {
   display: flex;
   flex-direction: column;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
-  cursor: move;
+  cursor: pointer;
 }
 
 /* .high-priority-template {
@@ -221,7 +221,7 @@ button {
 
 .content-page-block:hover {
   border: 2px dashed #5068a8;
-  cursor: move;
+  cursor: text;
   padding: 0px;
 }
 
@@ -619,7 +619,7 @@ img.content-page-block {
 .img-button-container:hover,
 .plain-button-container:hover,
 .cta-container-child:hover {
-  cursor: move;
+  cursor: pointer;
 }
 
 .cta-label {
@@ -689,7 +689,7 @@ img.content-page-block {
 }
 
 .plain-button:hover {
-  cursor: move;
+  cursor: pointer;
 }
 
 .img-button-section {
@@ -919,7 +919,7 @@ img.content-page-block {
 }
 
 .content-image:hover {
-  cursor: move;
+  cursor: default;
 }
 
 /* menu container */
@@ -1290,8 +1290,6 @@ img.content-page-block {
   display: flex;
 }
 
-
-
 .info-desc-section .info-desc-content {
   padding: 2px;
 }
@@ -1302,7 +1300,7 @@ img.content-page-block {
 
 .container-column-info .info-desc-content:hover,
 .container-column-info .info-image-section:hover {
-  cursor: move;
+  cursor: default;
 }
 
 [data-gjs-type="info-cta-section"].gjs-selected .tile-open-menu {
